<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id = "@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        />

    <EditText
        android:id = "@+id/etFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etNombre"
        android:layout_alignStart="@+id/etNombre"
        android:layout_below="@+id/etNombre"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/et_fechanacimiento"
        android:inputType="date"
        />

    <EditText
        android:id = "@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etFechaNacimiento"
        android:layout_alignStart="@+id/etFechaNacimiento"
        android:layout_below="@+id/etFechaNacimiento"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_telefono"
        android:inputType="phone"
        />

    <EditText
        android:id = "@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etTelefono"
        android:layout_alignStart="@+id/etTelefono"
        android:layout_below="@+id/etTelefono"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_correo"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id = "@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etCorreo"
        android:layout_alignStart="@+id/etCorreo"
        android:layout_below="@+id/etCorreo"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/et_descripcion"
        android:inputType="text"
        />

    <Button
        android:id="@+id/btnSiguiente"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etDescripcion"
        android:layout_marginTop="60dp"
        android:text="@string/btn_siguiente"
        android:textSize="16sp"
        android:textStyle="normal|bold" />

</LinearLayout>
